feat: Add PDF export functionality
Integrates jspdf and jspdf-autotable to enable PDF report generation for admin dashboards. This allows for exporting test results and user data in a portable format.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "lucide-react": "^0.263.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.29"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
